--- a/views/register.html
+++ b/views/register.html
@@ -25,7 +25,7 @@
             <p> | </p>
             <a href="#"><i class="fa-solid fa-heart"></i> Favoritos</a>
             <p> | </p>
-            <a href="/views/productCart.html"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+            <a href="./views/productCart.html"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
             &nbsp
         </div>
 
