--- a/views/login.html
+++ b/views/login.html
@@ -19,9 +19,9 @@
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
     <header>
         <div class="navbarSuperior">
-            <a href="./views/login.html"><i class="fa-solid fa-user-check"></i> Ingresar</a>
+            <a href="/views/login.html"><i class="fa-solid fa-user-check"></i> Ingresar</a>
             <p> | </p>
-            <a href="./views/register.html"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
+            <a href="/views/register.html"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
             <p> | </p>
             <a href="#"><i class="fa-solid fa-heart"></i> Favoritos</a>
             <p> | </p>
@@ -59,14 +59,11 @@
         </div>
     </header>
 
-    <!-- Aquí comienza el main: formulario de log in -->
-    
+    <!-- Aquí comienza el main -->
     <main>
-        
+
         <br>
-        <br>
-        <h1>[ Aquí va el contenido de la página de log in ]</h1>
-        <br>
+        <h1>[ Contenido de la página de login ]</h1>
         <br>
 
     </main>
