--- a/views/productCart.html
+++ b/views/productCart.html
@@ -125,6 +125,11 @@
                 </ul>
             </section>
         </div>
+        <br>
+        <div class="legales">
+            <p>&nbsp © Pet Shop Animalia - Lo mejor para tus mascotas.<a href="#">Términos y condiciones</a></p>
+        </div>
+        <br>
     </footer>
 
 </body>
