--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,6 +128,7 @@
     font-weight: 550;
     color: var(--gris);
     max-width: 98%;
+    gap: 1em;
 }
 
 .slide {
@@ -165,22 +166,22 @@
     color: var(--blanco);
     cursor: pointer;
     display: none;
-    font-size: 40px;
-    height: 40px;
-    line-height: 35px;
+    font-size: 30px;
+    height: 25px;
+    line-height: 20px;
     position: absolute;
     top: 25%;
     text-align: center;
-    width: 40px;
+    width: 25px;
     z-index: 10;
 }
 
 .slide-control.prev {
-    left: 2%;
+    left: 1%;
 }
 
 .slide-control.next {
-    right: 2%;
+    right: 1%;
 }
 
 .slide-control:hover {
