--- a/views/index.html
+++ b/views/index.html
@@ -102,7 +102,7 @@
         </div>
         <br>
         <section>
-            <h3 class="titulares">No te pierdas nuestras increíbles ofertas</h3>
+            <h3 class="titulares">¡No te pierdas nuestras ofertas!</h3>
 
             <article>
                 <div class="card">
