--- a/public/css/styles-reg.css
+++ b/public/css/styles-reg.css
@@ -1,4 +1,141 @@
-/* Estilos universales */
+/* CSS Form de Registro Mariano */
+
+
+.form__reg {
+    background: rgba(form-bg,.9);
+    padding: 20px;
+    max-width:600px;
+    margin:40px auto;
+    border-radius: br;
+    box-shadow: 0 4px 10px 4px;
+    rgba (form-bg,.3); 
+  }
+
+  .tab__group {
+    list-style: none;
+    font-family: 'Roboto', serif;
+    margin:0 0 40px 0;
+    li a {
+      display: block;
+      text-decoration:none;
+      padding: 15px;
+      background:rgba(gray-light,.25);
+      color: gray-light;
+      font-size: 20px;
+      float:left;
+      width: 50%;
+      text-align:center;
+      cursor:pointer;
+      transition: 5s ease;
+      &:hover {
+        background: main-dark;
+        color: white;
+      }
+    }
+    .active a {
+      background:$main;
+      color:$white;
+    }
+  }
+  .register__title {
+      font-family: 'Roboto', serif;
+      text-align:center;
+      color: #C9914B;
+      font-weight: thin;
+      margin: 0%;
+  }
+  
+  label {
+    position:absolute;
+    transform:translateY(6px);
+    left:13px;
+    color:rgba(white,.5);
+    transition:all 0.25s ease;
+    pointer-events: none;
+    font-size:22px;
+  }
+  .req {
+      margin: 4px;
+      color: main;
+  }
+  label.active {
+    transform:translateY(50px);
+    left:2px;
+    font-size:14px;
+  }
+  input, textarea {
+    font-size:22px;
+    display:block;
+    width:100%;
+    height:100%;
+    padding:5px 10px;
+    background:none;
+    background-image:none;
+    border:1px solid gray-light;
+    color: white;
+    border-radius:0;
+    transition:border-color .25s ease, box-shadow .25s ease;
+  }
+  
+  textarea {
+    border: 2px solid gray-light;
+    resize vertical;
+  }
+  
+  .field-wrap {
+    position:relative;
+    margin-bottom:40px;
+    width: 100%;
+    border-style: none;
+  }
+  
+  .top__reg {
+      after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  }
+  
+  .titulares__reg{
+      color: #54A4CB;
+      padding-bottom: 20px;
+      font-family: 'Roboto', serif;
+      text-align: left;
+  }
+  
+  .button {
+    border:0;
+    outline:none;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: medium;
+    font-weight: bold;
+    letter-spacing: 0.5em;
+    color: white;
+    background-color: #54A4CB;
+  }
+
+  .button-block {
+    display:block;
+    width:50%;
+    margin-bottom: 20px;
+    align-items: flex-end ;
+  }
+
+  .forgot__reg {
+    margin-top:-20px;
+    text-align:right;
+  }
+  
+  .container__reg input{
+      width: 80%;
+      text-align: center;
+      border-radius: 20px;
+  }
+
+
+  /* Estilos universales */
 
 * {
     box-sizing: border-box;
@@ -396,7 +533,3 @@ footer {
         display: flex;
     }
 }
-
-
-
-
