--- a/views/register.html
+++ b/views/register.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/styles-reg.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
     <title>Animalia - Lo mejor para tus mascotas</title>
@@ -61,77 +61,122 @@
 
     <!-- Aquí comienza el main -->
     <main>
-
-        <br>
-        <h1>[ Contenido de la página de registro ]</h1>
-        <br>
-
-    </main>
-
-    <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-    <footer>
-        <br>
-        <div class="newsletter">
-            <p><i class="fa-solid fa-envelope">&nbsp</i>Suscríbite para recibir ofertas y novedades:</p>
-
-            <form action="#" method="GET">
-                <input type="text" placeholder="Nombre completo">
-                &nbsp
-                <input type="email" placeholder="Dirección de email">
-                <button type="submit" value="Submit">Enviar</button>
-            </form>
-
+        <!--Aqui comienza el form de registro de Mariano-->
+        <div class="container__reg">
+        <div class="register__title">
+            <h2>¡Hazte miembro de la comunidad Animalia y disfruta de sus beneficios!</h2>
         </div>
-        <br>
-        <br>
-
-        <div class="enlaces">
-            <section class="nosotros">
-                <h4>Nosotros</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Quiénes somos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Sucursales</a></li>
-                </ul>
-            </section>
-
-            <section class="ayuda">
-                <h4>Ayuda</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Medios de pago</a></li>
-                    <li><a href="#">Envios</a></li>
-                </ul>
-            </section>
-
-            <section class="cuenta">
-                <h4>Cuenta</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Mis pedidos</a></li>
-                    <li><a href="#">Seguimiento</a></li>
-                    <li><a href="#">Favoritos</a></li>
-                </ul>
-            </section>
-
-            <section class="redes">
-                <h4>¡Seguínos!</h4>
-                <br>
-                <ul>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                </ul>
-            </section>
+        <div class="form__reg">
+            <div class="tab-content">
+              <div class="signup__reg">
+                <div class="titulares__reg">
+                    <h3>Beneficios para nuevos socios</h3>
+                </div>
+                <form action="/" method="post">
+                    <div class="top__reg">
+                      <div class="field-wrap">
+                        <label>
+                        Mi nombre es...<span class="req"></span>
+                        </label>
+                        <input type="text" required autocomplete="off" />
+                      </div>
+                      <div class="field-wrap">
+                        <label>Mi mascota se llama...<span class="req"></span></label>
+                        <input type="text"required autocomplete="off"/>
+                      </div>
+                    </div>
+                    <div class="field-wrap">
+                      <label>
+                        Em@il...<span class="req"></span>
+                      </label>
+                      <input type="email"required autocomplete="off"/>
+                    </div>
+                    <div class="field-wrap">
+                      <label>Contraseña requerida...<span class="req"></span></label>
+                      <input type="password"required autocomplete="off"/>
+                    </div>
+                    <button type="submit" class="button button-block">Hola Animalia</button>
+                </form>
+            </div>
+                  <div class="signup__reg">
+                      <div class="titulares__reg">
+                        <h3>Quiero ver mis pedidos</h3>
+                      </div>
+                    <form action="/" method="post">
+                      <div class="field-wrap">
+                      <label>
+                        Socio número...<span class="req"></span>
+                      </label>
+                      <input type="email"required autocomplete="off"/>
+                    </div>
+                    <div class="field-wrap">
+                        <label>Contraseña...<span class="req"></span></label>
+                        <input type="password"required autocomplete="off"/>
+                    </div>
+                    <button class="button button-block"/>Log In</button>
+                    <br>
+                    <p class="forgot__reg"><a href="#">¿Olvidaste tu contraseña?</a></p>
+                </form>
+            </div>
         </div>
-        <br>
-        <div class="legales">
-            <p>&nbsp © Pet Shop Animalia - Lo mejor para tus mascotas.<a href="#">Términos y condiciones</a></p>
-        </div>
-        <br>
-    </footer>
+    </div>
+</div>
+    <!--Aqui termina el formulario de registro MARIANO-->
+</main>
+<!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
+<footer>
+    <div class="enlaces">
+        <section class="nosotros">
+            <h4>Nosotros</h4>
+            <br>
+            <ul>
+                <li><a href="#">Quiénes somos</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Sucursales</a></li>
+            </ul>
+        </section>
+
+        <section class="ayuda">
+            <h4>Ayuda</h4>
+            <br>
+            <ul>
+                <li><a href="#">Medios de pago</a></li>
+                <li><a href="#">Envios</a></li>
+            </ul>
+        </section>
+
+        <section class="cuenta">
+            <h4>Cuenta</h4>
+            <br>
+            <ul>
+                <li><a href="#">Mis pedidos</a></li>
+                <li><a href="#">Seguimiento</a></li>
+                <li><a href="#">Favoritos</a></li>
+            </ul>
+        </section>
+
+        <section class="redes">
+            <h4>¡Seguínos!</h4>
+            <br>
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            </ul>
+        </section>
+    </div>
+    <br>
+    <div class="legales__register">
+        <p>&nbsp © Pet Shop Animalia - Lo mejor para tus mascotas.<a href="#">Términos y condiciones</a></p>
+    </div>
+    <br>
+</footer>
 
 </body>
 
 </html>
+
+
+
+
+
