prod details y register

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/styles-ProdDetails.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
     <title>Animalia - Lo mejor para tus mascotas</title>
@@ -61,28 +61,54 @@
 
     <!-- Aquí comienza el main -->
     <main>
+        <section>
+        <br>
 
-        <br>
-        <h1>[ Contenido de la página de detalle de producto ]</h1>
-        <br>
+        <h2 class="titulares">Detalles de su producto elegido</h3>
+    <article>
+        <div class="detail__container">
+            <div class="card">
+                <a href="./views/productDetail.html"></a>
+                <div class="card-body">
+                    <a href="./views/productDetail.html">
+                        <a href="./views/productDetail.html"><img class="detail_prod__imag" src="/images/proplanperro.webp"></a>
+                        <p class="descripciones">PRO PLAN PERRO ADULTO 15 KG</p>
+                    </a>
+                    <p class="precios">$8.908</p>
+                    <p class="descuentos"><strong>¡¡ 15% OFF !! : $7572</strong></p>
+                    <label for="Cantidad" class="menu__cantidad">Cantidad:</label>
+                    <select name="Cantidad" id="Cantidad">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                    </select>
+                    <br>
+                    <button>Agregar al carrito</button>
+                </div>
+            <div class="card-body-detail">
+                <div class="cuotas__container">
+                        <i class="fa-brands fa-cc-visa"></i>
+                        <i class="fa-brands fa-cc-amex"></i>
+                        <i class="fa-brands fa-cc-apple-pay"></i>
+                        <i class="fa-brands fa-cc-paypal"></i>
+                        <p class="descripciones">6 cuotas sin interés <br> Consultar otras promociones bancarias</p>
+                </div>
+            </div>
+            <h4 class="titulares">¿Por qué alimentar a mi mascota con Pro Plan Adulto?</h4>
+            <p class="info__delprod">Creemos que la nutrición es la base de la salud a largo plazo y el punto de partida para una vida increíble de tu mascota.
+                Es por eso que PRO PLAN® es una buena elección para aquellos que desean alimentar a su mascota con una dieta basada en ciencia de vanguardia, arraigada en más de 90 años de resultados probados.
+                Ofrécele a tu mascota todos los nutrientes que necesita con los productos PURINA® PRO PLAN®, formulados con precisión para aprovechar al máximo los ingredientes de alta calidad, brindar una absorción eficiente de nutrientes y beneficios específicos comprobados en cada etapa de su vida, desde ayudar a respaldar la inmunidad en cachorros y gatitos hasta ayudar al bienestar en perros y gatos adultos. Todos nuestros productos ofrecen un gran sabor que les encantará.</p>
+        </div>
+    </div>
+    </article>
+</section>
+</div>
 
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
     <footer>
-        <br>
-        <div class="newsletter">
-            <p><i class="fa-solid fa-envelope">&nbsp</i>Suscríbite para recibir ofertas y novedades:</p>
-
-            <form action="#" method="GET">
-                <input type="text" placeholder="Nombre completo">
-                &nbsp
-                <input type="email" placeholder="Dirección de email">
-                <button type="submit" value="Submit">Enviar</button>
-            </form>
-
-        </div>
-        <br>
         <br>
 
         <div class="enlaces">
