subida de carrito

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/styles-prodCart.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
     <title>Animalia - Lo mejor para tus mascotas</title>
@@ -61,11 +61,52 @@
 
     <!-- Aquí comienza el main -->
     <main>
-
         <br>
-        <h1>[ Contenido de la página de carrito de compras ]</h1>
-        <br>
-
+        <h1 class="titulares">¡No te pierdas nuestras ofertas!</h1>
+        <section>
+            <article>
+                <div class="table">
+                     <table width="100%" cellspacing="5" cellpadding="0">
+                        <tr class="thead">
+                          <td height="50">PRODUCTO</td>
+                          <td>ENVIO</td>
+                          <td>PRECIO</td>
+                          <td>CANTIDAD</td>
+                          <td>TOTAL</td>
+                        </tr>
+                        <tr>
+                            <td class="tint"><a href="./views/productDetail.html"><img src="/images/purinaperro.webp"></a>PURINA DENTALIFE PERRO 119 GR</td>
+                            <td>bonificado</td>
+                            <td>$5550</td>
+                            <td>2</td>
+                            <td>$11100</td>
+                          </tr>
+                          <tr>
+                            <td class="tint"><a href="./views/productDetail.html"><img src="/images/proplangato.webp"></a>PRO PLAN GATO ADULTO 7.5 KG</td>
+                            <td>bonificado</td>
+                            <td>$8.156</td>
+                            <td>1</td>
+                            <td>$8.156</th>
+                          </tr>
+                          <tr
+                            <td height="40" class="ttotal"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>TOTAL</td>
+                            <td>$17256</th>
+                          </tr>
+                    </table>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="butons">
+                <button>Elegir más productos</button>
+                <button>Finalizar compra</button>
+            </div>
+            </article>
+        </section>
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
